@@ -1,3 +1,2 @@
-libqgis{QGIS_ABI}: shlib-calls-exit
 libqgis{QGIS_ABI}: package-name-doesnt-match-sonames
 libqgis{QGIS_ABI}: no-symbols-control-file
