@@ -1,0 +1,1 @@
+usr/lib/qgis/plugins/libglobeplugin.so
