@@ -17,6 +17,7 @@ usr/lib/qgis/plugins/libspatialqueryplugin.so
 usr/lib/qgis/plugins/libdisplacementplugin.so
 usr/lib/qgis/plugins/libofflineeditingplugin.so
 usr/lib/qgis/plugins/libroadgraphplugin.so
+usr/lib/qgis/plugins/libzonalstatisticsplugin.so
 usr/lib/qgis/qgis_help
 usr/share/pixmaps/qgis-icon.xpm
 usr/share/pixmaps/qgis-mime-icon.png
