@@ -42,6 +42,10 @@ endif
 #	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=FALSE
 #endif
 
+ifneq (,$(findstring $(DISTRIBUTION),"sid"))
+	CMAKE_OPTS += -D WITH_GLOBE=TRUE
+endif
+
 ifneq (,$(findstring $(DISTRIBUTION),"hardy intrepid"))
 LDFLAGS += -Wl,--as-needed -Wl,--no-undefined
 endif
@@ -160,7 +164,11 @@ binary-arch: build install
 	install -o root -g root -m 755 $(CURDIR)/debian/qgis.sh $(CURDIR)/debian/qgis-plugin-grass/usr/bin/qgis
 	install -o root -g root -m 755 $(CURDIR)/debian/qgis.sh $(CURDIR)/debian/qgis-plugin-grass/usr/bin/qbrowser
 	
+ifneq (,$(findstring $(DISTRIBUTION),"sid"))
+	dh_python2 --no-guessing-versions
+else
 	dh_pycentral
+endif
 	dh_installmenu
 	dh_icons
 ifneq (,$(findstring $(DISTRIBUTION),"lenny hardy"))
