@@ -2,8 +2,10 @@ qgis (1.8.0) UNRELEASED; urgency=low
 
   * new development version 1.8 after branch
   * add qgis browser (qbrowser)
+  * add zonal statistics plugins and globe plugin
+  * migrate unstable package to dh_python2
 
- -- Jürgen E. Fischer <jef@norbit.de>  Mon, 23 May 2011 18:08:18 +0200
+ -- Jürgen E. Fischer <jef@norbit.de>  Thu, 11 Aug 2011 14:22:11 +0200
 
 qgis (1.7.0) UNRELEASED; urgency=low
 
